--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Streamlit App
+name: Deploy to DigitalOcean
 
 on:
   push:
@@ -10,20 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Deploy to Droplet
-        run: |
-          ssh -o StrictHostKeyChecking=no root@159.203.176.36 << 'EOF'
-          cd /root/keenai
-          git pull origin main
-          source venv/bin/activate
-          pip install -r requirements.txt
-          sudo systemctl restart streamlit
-          EOF
+    - name: Deploy to Droplet
+      run: |
+        ssh -o StrictHostKeyChecking=no root@159.203.176.36 '
+          cd /root/keenai &&
+          git pull origin main &&
+          pkill -f streamlit &&
+          streamlit run main.py &
+        '
