--- a/deploy.yaml
+++ b/deploy.yaml
@@ -24,5 +24,5 @@ jobs:
           cd /root/keenai &&
           git pull origin main &&
           pkill -f streamlit &&
-          streamlit run main.py &
+          nohup streamlit run main.py &
         '
