--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no root@159.203.176.36 << 'EOF'
         cd /root/keenai
-        git pull origin main
+        git fetch origin
+        git reset --hard origin/main
         systemctl restart streamlit
         EOF
