--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,9 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    - name: Set environment variables
+      run: echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" >> $GITHUB_ENV
+
     - name: Deploy to Droplet
       run: |
         ssh -o StrictHostKeyChecking=no root@159.203.176.36 << 'EOF'
