--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,9 +19,10 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Set environment variables
-      run: |
-        echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" >> $GITHUB_ENV
-        echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}"
+      run: echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" >> $GITHUB_ENV
+
+    - name: Verify environment variable
+      run: echo "APP_PASSWORD is set to: $APP_PASSWORD"
 
     - name: Deploy to Droplet
       run: |
@@ -36,4 +37,5 @@ jobs:
       env:
         APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
       run: |
-        main.py
+        echo "Running script with APP_PASSWORD: $APP_PASSWORD"
+        python main.py
