--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,35 +18,14 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Set environment variables
-      run: echo "APP_PASSWORD=${{ secrets.APP_PASSWORD }}" >> $GITHUB_ENV
-
-    - name: Verify environment variable
-      run: |
-        echo "APP_PASSWORD is set to: $APP_PASSWORD"
-
-    - name: Install Python and dependencies
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
     - name: Deploy to Droplet
       run: |
-        ssh -o StrictHostKeyChecking=no root@159.203.176.36 << 'EOF'
+        output=$(ssh -o StrictHostKeyChecking=no root@159.203.176.36 << 'EOF'
+        set -x
         cd /root/keenai
         git fetch origin
         git reset --hard origin/main
         systemctl restart streamlit
         EOF
-
-    - name: Run Script and Check Logs
-      env:
-        APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
-      run: |
-        echo "Running script with APP_PASSWORD: $APP_PASSWORD"
-        python main.py
+        )
+        echo "$output"
