--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,8 +25,10 @@ jobs:
         set -e
         ssh -o StrictHostKeyChecking=no root@159.203.176.36 << 'EOF'
           export APP_PASSWORD=${APP_PASSWORD}
+          echo "APP_PASSWORD is set to: $APP_PASSWORD"
           cd /root/keenai
           git fetch origin
           git reset --hard origin/main
-          systemctl restart streamlit
+          echo "Restarting Streamlit service with APP_PASSWORD"
+          sudo systemctl restart streamlit
         EOF
