--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,7 @@ jobs:
           cd /root/keenai
           git fetch origin
           git reset --hard origin/main
+          pip install -r requirements.txt
           sudo systemctl daemon-reload
           sudo systemctl restart streamlit
         EOF
